@startuml Command
skinparam linetype ortho

note "Concrete Visitor" as n1
note "Concrete Item" as n2

class GameController{
}

interface Visitor{
  void allowUsage(SeedDrop item)
  void allowUsage(Hoe item)
}

class ItemVisitor{
  void allowUsage(SeedDrop item)
  void allowUsage(Hoe item)
}

interface Item{
  void accept(TargetVisitor itemVisitor)
}

class Hoe{
  void accept(TargetVisitor itemVisitor)
}

class SeedDrop{
  void accept(TargetVisitor itemVisitor)
}

n1 . ItemVisitor
n2 . Hoe
SeedDrop . n2
Visitor <|--ItemVisitor
Item <|-- Hoe
Item <|-- SeedDrop
GameController->Visitor
GameController-->Item

@enduml
